refactored deprecated URL constructor to URI constructors(thanks Java...)